--- a/gold-admin-frontend/src/app/views/pages/admin/sip-management/sip-cycle-date/sip-cycle-date-add/sip-cycle-date-add.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/sip-management/sip-cycle-date/sip-cycle-date-add/sip-cycle-date-add.component.html
@@ -8,15 +8,20 @@
                         <div class="col-4 form-label">
                             <label class="kt-padding-l-10 mandatory">SIP Cycle Date</label>
                         </div>
-                        <div class="col-8">
-                            <input type="text" class="form-control " formControlName="sipCycleDate"
-                                [class.isError]="controls.sipCycleDate.invalid &&  controls.sipCycleDate.touched">
-                            <mat-error *ngIf="controls.sipCycleDate.touched && controls.sipCycleDate.errors?.required">
-                                Required field
-                            </mat-error>
-                            <!-- <mat-error *ngIf="controls.leadName.touched && controls.leadName.errors?.pattern">
-                                Invalid Input
-                            </mat-error> -->
+                        <div class="col-12 col-lg-8">
+                            <select formControlName="cycleDate" class="form-control"
+                                [class.isError]="SipCycleDateForm.controls.cycleDate.touched && SipCycleDateForm.controls.cycleDate.invalid">
+                                <option value="">Select Date</option>
+                                <option *ngFor="let date of cycleDate" [value]="date.value">
+                            {{date?.name}}
+                        </option>
+                            </select>
+                            <!-- <div
+                        *ngIf="newSipForm.controls.bankId.touched && newSipForm.controls.bankId.invalid">
+                        <mat-error *ngIf="newSipForm.controls.bankId.errors?.required">
+                            Required field
+                        </mat-error>
+                    </div> -->
                         </div>
                     </div>
 
@@ -24,12 +29,20 @@
                         <div class="col-4 form-label">
                             <label class="kt-padding-l-10 mandatory">SIP Cycle Date Status</label>
                         </div>
-                        <div class="col-8">
-                            <input type="text" class="form-control text-capitalize" formControlName="sipCycleDateStatus"
-                                [class.isError]="controls.sipCycleDateStatus.invalid &&  controls.sipCycleDateStatus.touched">
-                            <mat-error *ngIf="controls.sipCycleDateStatus.touched && controls.sipCycleDateStatus.errors?.required">
-                                Required field
-                            </mat-error>
+                        <div class="col-12 col-lg-8">
+                            <select formControlName="cycleDateStatus" class="form-control"
+                                [class.isError]="SipCycleDateForm.controls.cycleDateStatus.touched && SipCycleDateForm.controls.cycleDateStatus.invalid">
+                                <option value="">Select Status Type</option>
+                                <option *ngFor="let status of statusList" [value]="status.value">
+                            {{status?.name}}
+                        </option>
+                            </select>
+                            <!-- <div
+                        *ngIf="newSipForm.controls.bankId.touched && newSipForm.controls.bankId.invalid">
+                        <mat-error *ngIf="newSipForm.controls.bankId.errors?.required">
+                            Required field
+                        </mat-error>
+                    </div> -->
                         </div>
                     </div>
                 </div>
