sip application complete

--- a/gold-admin-frontend/src/app/views/pages/admin/sip-management/create-sip/create-sip.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/sip-management/create-sip/create-sip.component.html
@@ -153,7 +153,7 @@
 
                 <div class="row mx-0 py-3">
                     <div class="col-12 text-center">
-                        <button class="dg-primary-btn" type="submit">Create Button </button>
+                        <button class="dg-primary-btn" (click) ="createSip()" type="submit">Submit</button>
                         <!-- <app-button [type]="'submit'" [value]="'Submit'"></app-button> -->
                     </div>
                 </div>
