--- a/gold-admin-frontend/src/app/views/pages/admin/sip-management/sip-investment-tenure/sip-investment-tenure-add/sip-investment-tenure-add.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/sip-management/sip-investment-tenure/sip-investment-tenure-add/sip-investment-tenure-add.component.html
@@ -6,10 +6,10 @@
                 <div class="col-12">
                     
                     <div class="row justify-content-center kt-margin-t-10">
-                        <div class="col-4 form-label">
+                        <div class="col-5 form-label">
                             <label class="kt-padding-l-10 mandatory">SIP Investment Tenure</label>
                         </div>
-                        <div class="col-12 col-lg-8">
+                        <div class="col-12 col-lg-7">
                             <select formControlName="investmentTenure" class="form-control"
                                 [class.isError]="SipInvestmentTenureForm.controls.investmentTenure.touched && SipInvestmentTenureForm.controls.investmentTenure.invalid">
                                 <option value="">Select Month/Year</option>
@@ -26,10 +26,10 @@
                         </div>
                     </div>
                     <div class="row justify-content-center kt-margin-t-10">
-                        <div class="col-4 form-label">
-                            <label class="kt-padding-l-10 mandatory">SIP Investment Tenure</label>
+                        <div class="col-5 form-label">
+                            <label class="kt-padding-l-10 mandatory">SIP Investment Tenure Status</label>
                         </div>
-                        <div class="col-12 col-lg-8">
+                        <div class="col-12 col-lg-7">
                             <select formControlName="investmentTenureStatus" class="form-control"
                                 [class.isError]="SipInvestmentTenureForm.controls.investmentTenureStatus.touched && SipInvestmentTenureForm.controls.investmentTenureStatus.invalid">
                                 <option value="">Select Status</option>
