--- a/gold-admin-frontend/src/app/views/pages/admin/sip-management/sip-application/sip-application.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/sip-management/sip-application/sip-application.component.html
@@ -58,14 +58,19 @@
                     <mat-cell *matCellDef="let item">{{item.cycleDate}}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="editSip">
-                    <mat-header-cell *matHeaderCellDef>EDIT SIP</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.cycleDateStatus}}</mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="renewSip">
-                    <mat-header-cell *matHeaderCellDef>Renew SIP</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.cycleDate}}</mat-cell>
+               
+                <ng-container matColumnDef="action">
+                    <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
+                    <mat-cell *matCellDef="let item">
+                        <div [ngStyle]="{'display': 'inherit'}"
+                            *ngxPermissionsOnly="['editLeadSource', 'deleteLeadSource']">
+                            <span class="kt-pointer" (click)="editCycleDate(item)"
+                                *ngxPermissionsOnly="['editLeadSource']">Edit</span>
+                            <div class="px-2">|</div>
+                            <span class="kt-pointer text-danger" (click)="deleteCycleDate(item)"
+                                *ngxPermissionsOnly="['deleteLeadSource']">Renew</span>
+                        </div>
+                    </mat-cell>
                 </ng-container>
 
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
