--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer/loan-transfer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer/loan-transfer.component.html
@@ -333,7 +333,7 @@
                                             </mat-error>
                                             <mat-error
                                                 *ngIf="disbursalForm.controls.processingCharge.invalid && disbursalForm.controls.processingCharge.errors?.lessThan">
-                                               <small>processingCharge should be less then disbursed amount</small>
+                                               <small>Processing charge should be less than disbursed amount</small>
                                             </mat-error>
                                     </div>
                                 </div>
