sip api changes

--- a/gold-admin-frontend/src/app/views/pages/admin/sip-management/sip-cycle-date/sip-cycle-date-add/sip-cycle-date-add.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/sip-management/sip-cycle-date/sip-cycle-date-add/sip-cycle-date-add.component.html
@@ -12,8 +12,8 @@
                             <select formControlName="cycleDate" class="form-control"
                                 [class.isError]="SipCycleDateForm.controls.cycleDate.touched && SipCycleDateForm.controls.cycleDate.invalid">
                                 <option value="">Select Date</option>
-                                <option *ngFor="let date of cycleDate" [value]="date.value">
-                            {{date?.name}}
+                                <option *ngFor="let date of cycleDate" [value]="date?.cycleDate">
+                            {{date?.cycleDate}}
                         </option>
                             </select>
                             <!-- <div
