--- a/gold-admin-frontend/src/app/views/pages/admin/sip-management/sip-investment-tenure/sip-investment-tenure-add/sip-investment-tenure-add.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/sip-management/sip-investment-tenure/sip-investment-tenure-add/sip-investment-tenure-add.component.html
@@ -13,8 +13,8 @@
                             <select formControlName="investmentTenure" class="form-control"
                                 [class.isError]="SipInvestmentTenureForm.controls.investmentTenure.touched && SipInvestmentTenureForm.controls.investmentTenure.invalid">
                                 <option value="">Select Month/Year</option>
-                                <option *ngFor="let tenure of investmentTenureList" [value]="tenure.value">
-                            {{tenure?.name}}
+                                <option *ngFor="let tenure of investmentTenureList" [value]="tenure.investmentTenure">
+                            {{tenure?.investmentTenureValue}}
                         </option>
                             </select>
                             <!-- <div
