--- a/gold-admin-frontend/src/app/views/partials/components/ornaments/ornaments.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/ornaments/ornaments.component.html
@@ -635,6 +635,17 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="col-6">
+                                    <div class="row kt-margin-t-15 ">
+                                        <div class="col-4 form-label">
+                                            <label class="text-color my-auto">Remark</label>
+                                        </div>
+                                        <div class="col-8">
+                                            <input type="text" class="form-control" placeholder="Remark"
+                                                formControlName="remark">
+                                        </div>
+                                    </div>
+                                </div>
 
                                 <div *ngIf="data && data.modal && !data.packetView" class="col-6">
                                     <div class="row kt-margin-t-15 ">
